--- a/movie.css
+++ b/movie.css
@@ -2,8 +2,8 @@ body {
     background-image: url(img/background.png);
     background-attachment: fixed;
     margin: 0pt;
-    font-family: sans-serif;
     font-size: 8pt;
+    font-family: sans-serif;
 }
 
 .banner{
@@ -15,7 +15,6 @@ body {
 
 h1 {
     font-size: 24pt;
-    font-family: Tahoma;
     text-align: center;
 }
 
@@ -44,17 +43,21 @@ h1 {
     background-repeat: repeat-x;
 }
 
+.leftCBanner p {
+    margin: 0 auto;
+    position: relative;
+    top: 15%;
+    left: 1%;
+}
+
 #percentage {
     font-size: 48pt;
     font-weight: bold;
     color: red;
-    vertical-align: 15%;
 }
 
 #reviewC {
-    font-size: 8pt;
     color: white;
-    vertical-align: 15%;
 }
 
 .leftReview {
@@ -105,7 +108,6 @@ h1 {
 
 dl {
     margin: 10px;
-    font-size: 8pt;
     font-family: Arial;
 }
 
